# puzzle-runner

./: .gitattributes  .gitignore  README.md  REQUIREMENTS.md  config.claude.example.toml  config.example.toml  config.gemini-cli.example.toml  config.gemini.example.toml  config.grok-build.example.toml  config.opencode.example.toml  config.openrouter.example.toml  final_results.md  level_dimensions.csv  model_metadata.md  pyproject.toml  setup.py  visualizations.html
assets/model-family-icons/: README.md
scripts/: antigravity-cli  build_visualizations.py  claude-code  codex_models.py  gemini-cli  opencode
src/puzzle_runner/: __init__.py  cli.py  config.py  evaluation.py  guard.py  openrouter_agent.py  openrouter_usage.py  process.py  prompts.py  runner.py  watch.py
tests/: test_config.py  test_evaluation.py  test_guard.py  test_openrouter_agent.py  test_openrouter_usage.py  test_process.py  test_prompts.py  test_runner.py  test_watch.py
