[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle-runner"
version = "0.1.0"
description = "Iterative benchmark orchestrator for AI coding agents."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
puzzle-runner = "puzzle_runner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
